# xgalaga-sdl

./: .gitignore  INSTALL  Makefile.am  Makefile.in  Makefile.wii  README  README.SOUND  README.wii  SFont.c  aclocal.m4  config.h.in  configure  configure.ac  configure.in  data.c  data.h  defs.h  explosions.c  frate.c  highscore.c  images.c  images.h  joystick.c  linux-joystick.c  linux_pcsp.h  main.c  mkimgsrc  mkinstalldirs  nas_sound.c  pathfile.c  paths.c  paths.h  prize.c  proto.h  score.c  sdl.c  sound.c  sound.h  struct.h  testbuilds.sh  (+3 more)
images/: al.xpm  alien10.xpm  alien12.xpm  alien14.xpm  alien16.xpm  alien17.xpm  alien3.xpm  alien5.xpm  alien8.xpm  extra.xpm  mtorp.xpm  pause.xpm  player2.xpm  pr_brain.xpm  pr_extrabullet.xpm  pr_lemon.xpm  pr_trip.xpm  s1000.xpm  s2000.xpm  s4000.xpm  s500.xpm
levels/: level1.xgl  level10.xgl  level11.xgl  level12.xgl  level14.xgl  level15.xgl  level2.xgl  level3.xgl  level4.xgl  level5.xgl  level6.xgl  level7.xgl
libsprite/: cleararea.c  color.c  cursor.c  data.c  defs.h  event.c  fill.c  init.c  line.c  makewindow.c  misc.c  point.c  scale.c  text.c
sounds/: firetorp.raw
src/: Makefile.am  Makefile.in  SFont.c  SFont.h  TFont.c  config.h.in  data.c  data.h  defs.h  frate.c  highscore.c  joystick.c  main.c  pathfile.c  prize.c  proto.h  score.c  sdl.c  sound.c  struct.h  title.c  xgalaga.h
trunk/: CHANGES  CREDITS  INSTALL  Makefile.am  Makefile.in  README  README.wii  SFont.c  SFont.h  Wlib.h  acconfig.h  aclocal.m4  config.guess  config.h.in  configure  configure.ac  configure.in  copyright.h  data.c  data.h  defs.h  explosions.c  frate.c  highscore.c  images.c  images.h  joystick.c  main.c  mkimgsrc.out  pathfile.c  paths.c  paths.h  prize.c  proto.h  score.c  sdl.c  sound.c  sound.h  struct.h  title.c  (+4 more)
trunk/images/: alien1.xpm  alien11.xpm  alien13.xpm  alien15.xpm  alien2.xpm  alien4.xpm  alien6.xpm  alien7.xpm  alien9.xpm  etorp.xpm  miniship.xpm  player1.xpm  player3.xpm  pr_blank.xpm  pr_doub.xpm  pr_shield.xpm  pr_sing.xpm  pr_speed.xpm  rotate16  shield.xpm  title.xpm
trunk/levels/: level8.xgl  level9.xgl
trunk/libsprite/: Makefile.in  README.libsprite  Wlib.h  Wproto.h  allincludes.h  border.c  buffer.c  circle.c  data.h  image.c  mapwindow.c  menu.c  mouse.c  scroll.c  sector.c  struct.h  tile.c  triangle.c
trunk/sounds/: ddloo.raw  explode.raw  explode_big.raw  shield.raw  smart.raw  torphit.raw  warp.raw
trunk/src/: Makefile.am  Makefile.in  SFont.c  SFont.h  TFont.c  config.h.in  data.c  data.h  defs.h  explosions.c  frate.c  highscore.c  images.c  images.h  joystick.c  main.c  pathfile.c  prize.c  proto.h  score.c  sdl.c  sound.c  struct.h  title.c  xgalaga.h
