bin_PROGRAMS = xgalaga-sdl

xgalaga_sdl_LDADD = @SDL_LIBS@
xgalaga_sdl_CFLAGS = -DDATADIR=\"@datadir@\" @SDL_CPPFLAGS@

xgalaga_sdl_SOURCES = \
	SFont.c \
	SFont.h \
	config.h \
	data.c \
	data.h \
	defs.h \
	explosions.c \
	frate.c \
	highscore.c \
	images.c \
	images.h \
	joystick.c \
	main.c \
	pathfile.c \
	paths.c \
	paths.h \
	prize.c \
	proto.h \
	score.c \
	sdl.c \
	sound.c \
	sound.h \
	struct.h \
	title.c

data_DATA = \
	CREDITS \
	images/al.png \
	images/alien1.png \
	images/alien10.png \
	images/alien11.png \
	images/alien12.png \
	images/alien13.png \
	images/alien14.png \
	images/alien15.png \
	images/alien16.png \
	images/alien17.png \
	images/alien2.png \
	images/alien3.png \
	images/alien4.png \
	images/alien5.png \
	images/alien6.png \
	images/alien7.png \
	images/alien8.png \
	images/alien9.png \
	images/etorp.png \
	images/explosion.png \
	images/extra.png \
	images/miniship.png \
	images/mtorp.png \
	images/pause.png \
	images/player1.png \
	images/player2.png \
	images/player3.png \
	images/pr_brain.png \
	images/pr_doub.png \
	images/pr_extrabullet.png \
	images/pr_lemon.png \
	images/pr_machine.png \
	images/pr_shield.png \
	images/pr_sing.png \
	images/pr_speed.png \
	images/pr_spread.png \
	images/pr_trip.png \
	images/s1000.png \
	images/s2000.png \
	images/s4000.png \
	images/s500.png \
	images/sfont_big_red.png \
	images/sfont_reg_cyan.png \
	images/sfont_reg_green.png \
	images/sfont_reg_grey.png \
	images/sfont_reg_red.png \
	images/sfont_reg_yellow.png \
	images/shield.png \
	images/title.png \
	levels/level1.xgl \
	levels/level10.xgl \
	levels/level11.xgl \
	levels/level12.xgl \
	levels/level13.xgl \
	levels/level14.xgl \
	levels/level15.xgl \
	levels/level2.xgl \
	levels/level3.xgl \
	levels/level4.xgl \
	levels/level5.xgl \
	levels/level6.xgl \
	levels/level7.xgl \
	levels/level8.xgl \
	levels/level9.xgl \
	sounds/ddloo.wav \
	sounds/explode.wav \
	sounds/explode_big.wav \
	sounds/firetorp.wav \
	sounds/shield.wav \
	sounds/smart.wav \
	sounds/torphit.wav \
	sounds/warp.wav
