dnl Process this file with autoconf to produce a configure script.
AC_INIT(data.h)
AC_PREFIX_DEFAULT(/usr/local/lib/xgalaga)

test "$prefix" = NONE && prefix=/usr/local/lib/xgalaga
test "$exec_prefix" = NONE && exec_prefix=/usr/local/bin

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_PATH_XTRA
if test -n "$no_x"; then
  AC_MSG_ERROR([Can't find X, you need X!])
else
  INCS="$INCS -I$x_includes"
  if test -n "$x_libraries"; then
    LIBS="-L$x_libraries"
  fi
fi

# Check for SDL libraries
saved_LIBS=$LIBS
AC_CHECK_PROG(HAVE_SDL_CONFIG, sdl-config, yes, no)
if test "$HAVE_SDL_CONFIG" = no; then
AC_MSG_ERROR(sdl-config doesn't exist. Try to check the PATH enviroment.)
fi

AC_CHECK_LIB(SDL, SDL_Init,,AC_MSG_ERROR([SDL library not found.]))
AC_CHECK_LIB(SDL_mixer,main,,AC_MSG_ERROR([SDL_mixer library not found.]))
AC_CHECK_LIB(SDL_image,IMG_Load,,AC_MSG_ERROR([SDL_image library not found.]))
AC_CHECK_LIB(SDL_gfx,SDL_framerateDelay,,AC_MSG_ERROR([SDL_gfx library not found.]))

SDL_CXXFLAGS=`sdl-config --cflags`
SDL_LIBS="`sdl-config --libs` $LIBS"
LIBS=$saved_LIBS

AC_DEFINE_UNQUOTED([SOUNDDIR], ["$prefix/sounds/"], [Sounds])
AC_DEFINE_UNQUOTED([CREDITSFILE], ["$prefix/CREDITS"], [Credit file])
AC_DEFINE_UNQUOTED([IMAGEDIR], ["$prefix/images"], [Images])
AC_DEFINE_UNQUOTED([LEVELDIR], ["$prefix/levels/"], [Level directory])

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h strings.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gettimeofday select random lrand48)

AC_SUBST(SOUNDSERVER)
AC_SUBST(SOUNDSRVDIR)
AC_SUBST(SOUNDDEV)
AC_SUBST(SOUND)
AC_SUBST(CREDITSFILE)
AC_SUBST(SDL_LIBS)
AC_SUBST(SDL_CXXFLAGS)

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

